<resources>
    <string name="app_name">POPUP_STORE</string>
    <string name="home">Home</string>
    <string name="데이트코스">데이트코스</string>
    <string name="hot">인기(HOT)</string>
    <string name="date">" 데이트 코스"</string>
    <string name="map_button_description">Map</string>
    <string name="map_button_text">Map</string>
    <string name="home_button_description">Home</string>
    <string name="home_button_text">Home</string>
    <string name="event_button_description">Event</string>
    <string name="event_button_text">Event</string>
    <string name="mypage_button_description">MyPage</string>
    <string name="image_button1_description">DateCourse</string>
    <string name="image_button2_description">HOT</string>
    <string name="mypage_button_text">MyPage</string>
    <string name="image_button3_description">hotple</string>
    <string name="hotple">핫플</string>
    <string name="text_myPage">마이페이지</string>
    <string name="text_profileTitle">프로필</string>
    <string name="text_username">사용자명</string>
    <string name="button_modifyProfile">프로필 수정</string>
    <string name="text_listTitle">리뷰</string>
    <string name="popupStoreTitle">팝업스토어 제목</string>
    <string name="popupStoreDescription">여기에 팝업스토어 설명이 들어갑니다. 자세한 정보를 포함하여 사용자에게 매력을 어필하세요.</string>
</resources>