<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="404dp"
        android:layout_height="324dp"
        android:layout_marginBottom="74dp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

<!--    <SearchView-->
<!--        android:id="@+id/searchView"-->
<!--        android:layout_width="274dp"-->
<!--        android:layout_height="35dp"-->
<!--        android:layout_marginBottom="44dp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/imageButton1"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

    <!-- HOT -->
    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="276dp"
        android:contentDescription="@string/image_button2_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_star" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="66dp"
        android:layout_height="18dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/hot"
        app:layout_constraintEnd_toEndOf="@+id/imageButton2"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="@+id/imageButton2"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2" />

    <!-- DateCourse -->
    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="276dp"
        android:contentDescription="@string/image_button1_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_star" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="83dp"
        android:layout_height="19dp"
        android:gravity="center"
        android:text="@string/date"
        android:visibility="visible"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="340dp" />

    <!-- DateCourse -->

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="384dp"
        android:contentDescription="@string/image_button3_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_seongsu" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="66dp"
        android:layout_height="18dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/hot"
        app:layout_constraintEnd_toEndOf="@+id/imageButton3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageButton3"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3" />


    <!-- HOME -->

    <!-- TextView -->

    <!-- Map -->

    <!-- TextView -->

    <!-- Event -->


    <!-- MyPage -->

   <!-- <ImageButton
        android:id="@+id/HomeImageButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/home_button_description"
        android:src="@drawable/icon_home"
        android:scaleType="fitCenter"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/HomeButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/home_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/HomeImageButton"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="@id/HomeImageButton"
        app:layout_constraintTop_toBottomOf="@id/HomeImageButton" />

    <ImageButton
        android:id="@+id/MapImageButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="116dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/map_button_description"
        android:src="@drawable/icon_map"
        android:scaleType="fitCenter"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/MapButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/map_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/MapImageButton"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="@id/MapImageButton"
        app:layout_constraintTop_toBottomOf="@id/MapImageButton" />

    <ImageButton
        android:id="@+id/EventImageButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="212dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/event_button_description"
        android:src="@drawable/ic_event"
        android:scaleType="fitCenter"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/EventButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/event_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/EventImageButton"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@id/EventImageButton"
        app:layout_constraintTop_toBottomOf="@id/EventImageButton" />

    <ImageButton
        android:id="@+id/MyPageImageButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="316dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/mypage_button_description"
        android:src="@drawable/icon_mypage"
        android:scaleType="fitCenter"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/MyPageButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/mypage_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/MyPageImageButton"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="@id/MyPageImageButton"
        app:layout_constraintTop_toBottomOf="@id/MyPageImageButton" />
-->

</androidx.constraintlayout.widget.ConstraintLayout>