<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 그룹으로 묶인 프로필 정보 -->
    <androidx.constraintlayout.widget.Group
        android:id="@+id/profileGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="imageProfile,text_profileTitle,text_username,button_modifyProfile" />

    <TextView
        android:id="@+id/text_myPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/text_myPage"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="28dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageProfile"
        android:layout_width="65dp"
        android:layout_height="62dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="72dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_profile" />

    <TextView
        android:id="@+id/text_profileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_profileTitle"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="72dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_username"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="106dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_modifyProfile"
        android:layout_width="326dp"
        android:layout_height="37dp"
        android:text="@string/button_modifyProfile"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="146dp"
        tools:ignore="MissingConstraints" />

    <!--- 아코디언 메뉴 추가 -->



    <TextView
        android:id="@+id/text_listTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_listTitle"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="218dp" />

    <!-- 구분선 -->
    <View
        android:id="@+id/divider_1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="273dp" />

    <!-- 스크랩, 리뷰, 예약 아코디언 메뉴 -->
    <LinearLayout
        android:id="@+id/accordion_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_1">

        <!-- 스크랩 항목 -->
        <LinearLayout
            android:id="@+id/scrap_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/text_scrap"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="스크랩"
                android:textSize="20sp"
                android:layout_marginStart="16dp"/>

            <ImageButton
                android:id="@+id/button_scrap_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:src="@android:drawable/arrow_down_float" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/scrap_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"> <!-- 초기에는 숨김 -->

            <!-- 스크랩 세부 내용 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="스크랩 내용이 여기에 표시됩니다." />

            <!-- 스크랩 이미지 추가 -->
            <ImageView
                android:id="@+id/image_scrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_search"
                android:layout_marginTop="8dp"
                android:visibility="visible" />
        </LinearLayout>

        <!-- 구분선 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:background="#000" />

        <!-- 리뷰 항목 -->
        <LinearLayout
            android:id="@+id/review_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/text_review"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="리뷰"
                android:textSize="20sp"
                android:layout_marginStart="16dp"/>

            <ImageButton
                android:id="@+id/button_review_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:src="@android:drawable/arrow_down_float" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/review_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"> <!-- 초기에는 숨김 -->

            <!-- 리뷰 세부 내용 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="리뷰 내용이 여기에 표시됩니다." />

            <!-- 리뷰 이미지 추가 -->
            <ImageView
                android:id="@+id/image_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_mypage"
                android:layout_marginTop="8dp"
                android:visibility="visible" />
        </LinearLayout>

        <!-- 구분선 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:background="#000" />

        <!-- 예약 항목 -->
        <LinearLayout
            android:id="@+id/booking_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/text_booking"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="예약"
                android:textSize="20sp"
                android:layout_marginStart="16dp" />

            <ImageButton
                android:id="@+id/button_booking_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:src="@android:drawable/arrow_down_float" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/booking_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"> <!-- 초기에는 숨김 -->

            <!-- 예약 세부 내용 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="예약 내용이 여기에 표시됩니다." />

            <!-- 예약 이미지 추가 -->
            <ImageView
                android:id="@+id/image_booking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_chat"
                android:layout_marginTop="8dp"
                android:visibility="visible" />
        </LinearLayout>

        <!-- 구분선 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="#000" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>